# rapidradio

./: LICENSE  README.md
arduino/rapidradio_receive/: hardware.h  librapidradio.cpp  rapidradio_receive.ino
arduino/rapidradio_send/: librapidradio.cpp  rapidradio.h  rapidradio_send.ino
raspberrypi/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  rapidradio_install.sh
raspberrypi/scripts/: Makefile.am  Makefile.in  versioncheck.pl
raspberrypi/src/: Makefile.am  Makefile.in
raspberrypi/src/librapidradio/: hardware.h  librapidradio.cpp  rapidradio.h
raspberrypi/src/tools/rapidradio/: rapidradio.cpp
